--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
 deploy.ant.properties.file=C:\\Users\\msii\\AppData\\Roaming\\NetBeans\\11.0\\tomcat80.properties
 j2ee.server.home=C:/apache-tomcat-8.5.23
 j2ee.server.instance=tomcat80:home=C:\\apache-tomcat-8.5.23
+javac.debug=true
+javadoc.preview=true
+selected.browser=Chrome
 user.properties.file=C:\\Users\\msii\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
